Standardize alarm names; alert sooner on errors

--- a/stacks/serverless/analytics-ingest-alarms.yml
+++ b/stacks/serverless/analytics-ingest-alarms.yml
@@ -25,7 +25,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][BigQuery][Errors] ${EnvironmentType} > 1"
+      AlarmName: !Sub "[Analytics][BigQuery][Errors] ${EnvironmentType}"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -38,9 +38,9 @@ Resources:
       EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: 300
+      Period: 60
       Statistic: Sum
-      Threshold: 1
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -49,7 +49,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][BigQuery][IteratorAge] ${EnvironmentType} > 15 minutes"
+      AlarmName: !Sub "[Analytics][BigQuery][IteratorAge] ${EnvironmentType} > 15 minutes"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
@@ -73,7 +73,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][BigQuery][IteratorAge] ${EnvironmentType} > 1 Hour"
+      AlarmName: !Sub "[Analytics][BigQuery][IteratorAge] ${EnvironmentType} > 1 Hour"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -97,7 +97,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][DynamoDB][Errors] ${EnvironmentType} > 1"
+      AlarmName: !Sub "[Analytics][DynamoDB][Errors] ${EnvironmentType}"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -110,9 +110,9 @@ Resources:
       EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: 300
+      Period: 60
       Statistic: Sum
-      Threshold: 1
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -121,7 +121,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][DynamoDB][IteratorAge] ${EnvironmentType} > 15 minutes"
+      AlarmName: !Sub "[Analytics][DynamoDB][IteratorAge] ${EnvironmentType} > 15 minutes"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
@@ -145,7 +145,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][DynamoDB][IteratorAge] ${EnvironmentType} > 1 Hour"
+      AlarmName: !Sub "[Analytics][DynamoDB][IteratorAge] ${EnvironmentType} > 1 Hour"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -169,7 +169,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][Pingbacks][Errors] ${EnvironmentType} > 1"
+      AlarmName: !Sub "[Analytics][Pingbacks][Errors] ${EnvironmentType}"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -182,9 +182,9 @@ Resources:
       EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: 300
+      Period: 60
       Statistic: Sum
-      Threshold: 1
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -193,7 +193,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][Pingbacks][IteratorAge] ${EnvironmentType} > 15 minutes"
+      AlarmName: !Sub "[Analytics][Pingbacks][IteratorAge] ${EnvironmentType} > 15 minutes"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
@@ -217,7 +217,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][Pingbacks][IteratorAge] ${EnvironmentType} > 1 Hour"
+      AlarmName: !Sub "[Analytics][Pingbacks][IteratorAge] ${EnvironmentType} > 1 Hour"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -241,7 +241,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][Redis][Errors] ${EnvironmentType} > 1"
+      AlarmName: !Sub "[Analytics][Redis][Errors] ${EnvironmentType}"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -254,9 +254,9 @@ Resources:
       EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: 300
+      Period: 60
       Statistic: Sum
-      Threshold: 1
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -265,7 +265,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][Redis][IteratorAge] ${EnvironmentType} > 15 minutes"
+      AlarmName: !Sub "[Analytics][Redis][IteratorAge] ${EnvironmentType} > 15 minutes"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
@@ -289,7 +289,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][Redis][IteratorAge] ${EnvironmentType} > 1 Hour"
+      AlarmName: !Sub "[Analytics][Redis][IteratorAge] ${EnvironmentType} > 1 Hour"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
