--- a/stacks/serverless/analytics-ingest-filters.yml
+++ b/stacks/serverless/analytics-ingest-filters.yml
@@ -55,7 +55,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsBigqueryLambda][LogErrors] ${EnvironmentType}"
+      AlarmName: !Sub "[Analytics][BigQuery][LogErrors] ${EnvironmentType}"
       AlarmActions:
         - !If [IsProduction, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -103,7 +103,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsDynamodbLambda][LogErrors] ${EnvironmentType}"
+      AlarmName: !Sub "[Analytics][DynamoDB][LogErrors] ${EnvironmentType}"
       AlarmActions:
         - !If [IsProduction, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -160,7 +160,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsPingbacksLambda][LogErrors] ${EnvironmentType}"
+      AlarmName: !Sub "[Analytics][Pingbacks][LogErrors] ${EnvironmentType}"
       AlarmActions:
         - !If [IsProduction, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -199,7 +199,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsRedisLambda][LogErrors] ${EnvironmentType}"
+      AlarmName: !Sub "[Analytics][Redis][LogErrors] ${EnvironmentType}"
       AlarmActions:
         - !If [IsProduction, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
