--- a/notifications/slack/template.yml
+++ b/notifications/slack/template.yml
@@ -10,6 +10,8 @@ Parameters:
     Type: String
   AwsOrganizationCrossAccountSharingRoleArn:
     Type: String
+  DevOpsCrossAccountAccessRoleName:
+    Type: String
 Resources:
   HttpApi:
     Type: AWS::Serverless::HttpApi
@@ -52,6 +54,7 @@ Resources:
                   - "sts:AssumeRole"
                 Resource:
                   - arn:aws:iam::*:role/*Oganization-CrossAccountSharingRole
+                  - !Sub arn:aws:iam::*:role/*${DevOpsCrossAccountAccessRoleName}
       Tags:
         - Key: Project
           Value: DevOps
@@ -70,6 +73,7 @@ Resources:
           SLACK_ACCESS_TOKEN: !Ref SlackAccessToken
           AWS_NODEJS_CONNECTION_REUSE_ENABLED: "1"
           AWS_ORGANIZATION_CROSS_ACCOUNT_SHARING_ROLE_ARN: !Ref AwsOrganizationCrossAccountSharingRoleArn
+          DEVOPS_CROSS_ACCOUNT_ACCESS_ROLE_NAME: !Ref DevOpsCrossAccountAccessRoleName
       Events:
         EventRequest:
           Properties:
