--- a/cdn/log-shipper.yml
+++ b/cdn/log-shipper.yml
@@ -224,12 +224,12 @@ Resources:
       LogGroupName: !Sub /aws/lambda/${ShipperFunction}
       RetentionInDays: 30
       Tags:
-        - { Name: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Name: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Name: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Name: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Name: prx:dev:family, Value: Dovetail }
-        - { Name: prx:dev:application, Value: Log Shipper }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Log Shipper }
   ShipperFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
